--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "numpy>=2.2.1",
     "opencv-python>=4.11.0.86",
     "pyinstaller>=6.11.1",
+    "pyright>=1.1.392.post0",
     "scikit-image>=0.25.0",
 ]
 
@@ -19,6 +20,7 @@ max-line-length = 120
 
 [tool.flake8]
 max-line-length = 120
+ignore = ["E203"]  # Ignore 'whitespace before ":"'
 
 [tool.black]
 line-length = 120
