--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,6 @@ description = "A Python package to identify photos in videos and extract them."
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [{name = "John Mathews", email = "mthwsjc@gmail.com"}]
-homepage = "https://github.com/johnmathews/photo-extractor"
-repository = "https://github.com/johnmathews/photo-extractor"
 keywords = ["video", "image", "photo", "opencv"]
 requires-python = ">=3.13"
 classifiers = [
@@ -20,7 +18,8 @@ classifiers = [
 dependencies = [
     "opencv-python",
     "numpy",
-    "scikit-image"
+    "scikit-image",
+    "pyinstaller>=6.11.1",
 ]
 
 [project.scripts]
