--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,16 @@ dependencies = [
     "pyinstaller>=6.11.1",
     "scikit-image>=0.25.0",
 ]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+line-length = 120
+max-line-length = 120
+
+[tool.flake8]
+max-line-length = 120
+ignore = ["E203"]  # Ignore 'whitespace before ":"'
+
+[tool.black]
+line-length = 120
